# tool_for_run_project

./: .gitignore  README.md  config.py  go.py  pyproject.toml  requirements.txt  settings.json  settings.py  test.py
core/: __init__.py  commands.py  jenkins.py  jira.py  radix_update_compile_designer.py
core/svn/: find_release_version.py  get_age.py  get_last_release_version.py  search_by_versions.py
scripts/: go.bat  jira.bat  ошкф.bat  пщ.bat
src/tool_for_run_project/: go.py  settings.py
src/tool_for_run_project/core/: __init__.py  commands.py  jenkins.py  jira.py  radix_update_compile_designer.py  utils.py
src/tool_for_run_project/core/svn/: __init__.py  find_release_version.py  get_age.py  get_last_release_version.py  search_by_versions.py
tests/: test.py  test_main.py
